Bug 129052 - One predefined gradient’s name is misspelled: *“Mahagoni” vs “Mahogany”
Summary: One predefined gradient’s name is misspelled: *“Mahagoni” vs “Mahogany”
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.1 all versions
Hardware: All All
: low trivial
Assignee: Heiko Tietze
URL: https://opengrok.libreoffice.org/sear...
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-27 06:44 UTC by Adolfo Jayme Barrientos
Modified: 2019-11-27 12:30 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adolfo Jayme Barrientos 2019-11-27 06:44:10 UTC
Now that we’ve switched to Weblate, I was looking at how many of LO’s languages have this string translated correctly. Many teams got it right, but several of them thought that this was some kind of proper name and left it untranslated. It is not an invented proper name to be left alone; it’s just a misspelled common noun.

This was missed from this commit [1], which fixed most of the typos introduced by last year’s default gradient refresh [2].

[1]: https://git.libreoffice.org/core/commit/c23c770e3516f3077d77b3c0410652ae3c7554fc
[2]: https://git.libreoffice.org/core/commit/c3ec2fb53c68547deda0724315841c818a39fb12
Comment 1 Heiko Tietze 2019-11-27 07:01:56 UTC
How embarrassing ;-)
Comment 2 Adolfo Jayme Barrientos 2019-11-27 10:14:42 UTC
Fixed in master commit 464f19536c2864a911f089d2988be2c3c3ce79b6

Thanks, Heiko!
Comment 3 Commit Notification 2019-11-27 12:30:48 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/cea9ac1a30698d280e195cb7a1912b8d45dff91e

Resolves tdf#129052 - Misspelled gradient

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.