Resolves tdf#129052 - Misspelled gradient

“Mahagoni” => “Mahogany”

Change-Id: I7bc63a7353f850366b153802ec8d7272340e3095
Reviewed-on: https://gerrit.libreoffice.org/83856
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
(cherry picked from commit 464f19536c2864a911f089d2988be2c3c3ce79b6)